feat: update gradle and java version